Bug 341404 - --restart CLI arg and /cycle -app command are not ported
Summary: --restart CLI arg and /cycle -app command are not ported
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
: 337519 337520 (view as bug list)
Depends on:
Blocks: 337512
  Show dependency treegraph
 
Reported: 2014-11-29 15:12 UTC by Eike Hein
Modified: 2016-10-29 17:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-11-29 15:12:14 UTC
We lost these in the port to QApplication+QCommandLineParser.

Reproducible: Always
Comment 1 Eike Hein 2014-11-29 15:12:54 UTC
*** Bug 337519 has been marked as a duplicate of this bug. ***
Comment 2 Eike Hein 2014-11-29 15:13:02 UTC
*** Bug 337520 has been marked as a duplicate of this bug. ***
Comment 3 Paulo Lieuthier 2015-04-06 17:00:41 UTC
What is the behaviour intented with --restart?
Comment 4 Eike Hein 2015-04-06 17:07:29 UTC
The existing Konversation instance quits and a new one is started in its place, with the original CLI args.
Comment 5 Peter Simonsson 2016-10-29 17:23:36 UTC
Git commit 285beecc4a0e3f98160e20b6a1e5eee272d5cfb5 by Peter Simonsson.
Committed on 29/10/2016 at 17:23.
Pushed by psn into branch 'master'.

Reenable --restart option

M  +15   -20   src/application.cpp
M  +1    -0    src/application.h
M  +1    -1    src/main.cpp

http://commits.kde.org/konversation/285beecc4a0e3f98160e20b6a1e5eee272d5cfb5