Reenable --restart option

BUG: 341404